SBOMER-79: Find and store SPDX license with the build (#1032)